# hocct

./: README.md  cabal.project  flake.nix
hocct/: hocct.cabal
hocct-Foundation/: CHANGES  hocct-Foundation.cabal  hocct-Foundation.json
hocct-Foundation/csrc/: HOCCT_Foundation_GP_Dir.cpp  HOCCT_Foundation_GP_Dir.h  HOCCT_Foundation_GP_Lin.cpp  HOCCT_Foundation_GP_Lin.h  HOCCT_Foundation_GP_Pln.cpp  HOCCT_Foundation_GP_Pln.h  HOCCT_Foundation_GP_Pnt.cpp  HOCCT_Foundation_GP_Pnt.h  HOCCT_Foundation_GP_Trsf.cpp  HOCCT_Foundation_GP_Trsf.h  HOCCT_Foundation_GP_Vec.cpp  HOCCT_Foundation_GP_Vec.h  HOCCT_Foundation_GP_XYZ.cpp  HOCCT_Foundation_GP_XYZ.h  HOCCT_Foundation_Standard_Transient.cpp  HOCCT_Foundation_Standard_Transient.h  HOCCT_Foundation_TopLoc_Location.cpp  HOCCT_Foundation_TopLoc_Location.h  hocct-FoundationTopLevel.cpp  hocct-FoundationTopLevel.h  hocct-FoundationType.h
hocct-Foundation/src/HOCCT/: Foundation.hs
hocct-Foundation/src/HOCCT/Foundation/: GP_Dir.hs  GP_Lin.hs  GP_Pln.hs  GP_Pnt.hs  GP_Trsf.hs  GP_Vec.hs  GP_XYZ.hs  Ordinary.hs  Standard_Transient.hs  TH.hs  Template.hs  TopLoc_Location.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Dir/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Lin/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Pln/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Pnt/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Trsf/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_Vec/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/GP_XYZ/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/NCollection_List/: TH.hs  Template.hs
hocct-Foundation/src/HOCCT/Foundation/Standard_Handle/: TH.hs  Template.hs
hocct-Foundation/src/HOCCT/Foundation/Standard_Transient/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-Foundation/src/HOCCT/Foundation/TopLoc_Location/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/: Setup.hs  hocct-ModelingData.cabal  hocct-ModelingData.json
hocct-ModelingData/csrc/: HOCCT_ModelingData_BRepTools.cpp  HOCCT_ModelingData_BRepTools.h  HOCCT_ModelingData_BRep_Builder.cpp  HOCCT_ModelingData_BRep_Builder.h  HOCCT_ModelingData_GCE_MakeMirror.cpp  HOCCT_ModelingData_GCE_MakeMirror.h  HOCCT_ModelingData_GCE_MakeRotation.cpp  HOCCT_ModelingData_GCE_MakeRotation.h  HOCCT_ModelingData_GCE_MakeScale.cpp  HOCCT_ModelingData_GCE_MakeScale.h  HOCCT_ModelingData_GCE_MakeTranslation.cpp  HOCCT_ModelingData_GCE_MakeTranslation.h  HOCCT_ModelingData_GC_MakeSegment.cpp  HOCCT_ModelingData_GC_MakeSegment.h  HOCCT_ModelingData_GC_Root.cpp  HOCCT_ModelingData_GC_Root.h  HOCCT_ModelingData_Geom_BSplineCurve.cpp  HOCCT_ModelingData_Geom_BSplineCurve.h  HOCCT_ModelingData_Geom_BSplineSurface.cpp  HOCCT_ModelingData_Geom_BSplineSurface.h  HOCCT_ModelingData_Geom_BezierCurve.cpp  HOCCT_ModelingData_Geom_BezierCurve.h  HOCCT_ModelingData_Geom_BezierSurface.cpp  HOCCT_ModelingData_Geom_BezierSurface.h  HOCCT_ModelingData_Geom_BoundedCurve.cpp  HOCCT_ModelingData_Geom_BoundedCurve.h  HOCCT_ModelingData_Geom_BoundedSurface.cpp  HOCCT_ModelingData_Geom_BoundedSurface.h  HOCCT_ModelingData_Geom_CartesianPoint.cpp  HOCCT_ModelingData_Geom_CartesianPoint.h  HOCCT_ModelingData_Geom_Circle.cpp  HOCCT_ModelingData_Geom_Circle.h  HOCCT_ModelingData_Geom_Conic.cpp  HOCCT_ModelingData_Geom_Conic.h  HOCCT_ModelingData_Geom_Curve.cpp  HOCCT_ModelingData_Geom_Curve.h  HOCCT_ModelingData_Geom_Direction.cpp  HOCCT_ModelingData_Geom_Direction.h  HOCCT_ModelingData_Geom_Ellipse.cpp  HOCCT_ModelingData_Geom_Ellipse.h  (+49 more)
hocct-ModelingData/src/HOCCT/: ModelingData.hs
hocct-ModelingData/src/HOCCT/ModelingData/: BRepTools.hs  BRep_Builder.hs  GCE_MakeMirror.hs  GCE_MakeRotation.hs  GCE_MakeScale.hs  GCE_MakeTranslation.hs  GC_MakeSegment.hs  GC_Root.hs  Geom_BSplineCurve.hs  Geom_BSplineSurface.hs  Geom_BezierCurve.hs  Geom_BezierSurface.hs  Geom_BoundedCurve.hs  Geom_BoundedSurface.hs  Geom_CartesianPoint.hs  Geom_Circle.hs  Geom_Conic.hs  Geom_Curve.hs  Geom_Direction.hs  Geom_Ellipse.hs  Geom_Geometry.hs  Geom_Hyperbola.hs  Geom_Line.hs  Geom_OffsetCurve.hs  Geom_Parabola.hs  Geom_Point.hs  Geom_RectangularTrimmedSurface.hs  Geom_Surface.hs  Geom_TrimmedCurve.hs  Geom_Vector.hs  Geom_VectorWithMagnitude.hs  Message_ProgressRange.hs  Ordinary.hs  TH.hs  Template.hs  TopExp_Explorer.hs  TopoDS_Builder.hs  TopoDS_CompSolid.hs  TopoDS_Compound.hs  TopoDS_Edge.hs  (+6 more)
hocct-ModelingData/src/HOCCT/ModelingData/BRepTools/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/BRep_Builder/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GCE_MakeMirror/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GCE_MakeRotation/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GCE_MakeScale/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GCE_MakeTranslation/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GC_MakeSegment/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/GC_Root/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/Geom_BSplineCurve/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct-ModelingData/src/HOCCT/ModelingData/Geom_BSplineSurface/: Cast.hs  FFI.hsc  Implementation.hs  Interface.hs  RawType.hs
hocct/src/: HOCCT.hs
nix/: opencascade-hxx.nix
(+488 files in other folders)
