Cabal-version:  3.0
Name:                hocct-Foundation
Version:     0.1.0
Synopsis:    
Description:         
Homepage:       
license: GPL-2.0-only
license-file: LICENSE
Author:              
Maintainer:  
Category:       
Tested-with:    GHC == 9.0.2 || == 9.2.4 || == 9.4.2 
Build-Type: Custom
custom-setup
  setup-depends: Cabal, base, process

Extra-source-files:

                       csrc/HOCCT_Foundation_GP_Trsf.h
                       csrc/HOCCT_Foundation_GP_Pln.h
                       csrc/HOCCT_Foundation_GP_Lin.h
                       csrc/HOCCT_Foundation_GP_Dir.h
                       csrc/HOCCT_Foundation_GP_XYZ.h
                       csrc/HOCCT_Foundation_GP_Vec.h
                       csrc/HOCCT_Foundation_GP_Pnt.h
                       csrc/HOCCT_Foundation_TopLoc_Location.h
                       csrc/HOCCT_Foundation_Standard_Transient.h
                       csrc/HOCCT_Foundation_GP_Trsf.cpp
                       csrc/HOCCT_Foundation_GP_Pln.cpp
                       csrc/HOCCT_Foundation_GP_Lin.cpp
                       csrc/HOCCT_Foundation_GP_Dir.cpp
                       csrc/HOCCT_Foundation_GP_XYZ.cpp
                       csrc/HOCCT_Foundation_GP_Vec.cpp
                       csrc/HOCCT_Foundation_GP_Pnt.cpp
                       csrc/HOCCT_Foundation_TopLoc_Location.cpp
                       csrc/HOCCT_Foundation_Standard_Transient.cpp




Library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:  -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports
  ghc-prof-options: -caf-all -auto-all
  cxx-options: -std=c++17
  Build-Depends: base > 4 && < 5, fficxx >= 0.7, fficxx-runtime >= 0.7, template-haskell, stdcxx
  Exposed-Modules:
                       HOCCT.Foundation
                       HOCCT.Foundation.Ordinary
                       HOCCT.Foundation.Template
                       HOCCT.Foundation.TH
                       HOCCT.Foundation.GP_Trsf
                       HOCCT.Foundation.GP_Pln
                       HOCCT.Foundation.GP_Lin
                       HOCCT.Foundation.GP_Dir
                       HOCCT.Foundation.GP_XYZ
                       HOCCT.Foundation.GP_Vec
                       HOCCT.Foundation.GP_Pnt
                       HOCCT.Foundation.TopLoc_Location
                       HOCCT.Foundation.Standard_Transient
                       HOCCT.Foundation.GP_Trsf.RawType
                       HOCCT.Foundation.GP_Pln.RawType
                       HOCCT.Foundation.GP_Lin.RawType
                       HOCCT.Foundation.GP_Dir.RawType
                       HOCCT.Foundation.GP_XYZ.RawType
                       HOCCT.Foundation.GP_Vec.RawType
                       HOCCT.Foundation.GP_Pnt.RawType
                       HOCCT.Foundation.TopLoc_Location.RawType
                       HOCCT.Foundation.Standard_Transient.RawType
                       HOCCT.Foundation.GP_Trsf.FFI
                       HOCCT.Foundation.GP_Pln.FFI
                       HOCCT.Foundation.GP_Lin.FFI
                       HOCCT.Foundation.GP_Dir.FFI
                       HOCCT.Foundation.GP_XYZ.FFI
                       HOCCT.Foundation.GP_Vec.FFI
                       HOCCT.Foundation.GP_Pnt.FFI
                       HOCCT.Foundation.TopLoc_Location.FFI
                       HOCCT.Foundation.Standard_Transient.FFI
                       HOCCT.Foundation.GP_Trsf.Interface
                       HOCCT.Foundation.GP_Pln.Interface
                       HOCCT.Foundation.GP_Lin.Interface
                       HOCCT.Foundation.GP_Dir.Interface
                       HOCCT.Foundation.GP_XYZ.Interface
                       HOCCT.Foundation.GP_Vec.Interface
                       HOCCT.Foundation.GP_Pnt.Interface
                       HOCCT.Foundation.TopLoc_Location.Interface
                       HOCCT.Foundation.Standard_Transient.Interface
                       HOCCT.Foundation.GP_Trsf.Cast
                       HOCCT.Foundation.GP_Pln.Cast
                       HOCCT.Foundation.GP_Lin.Cast
                       HOCCT.Foundation.GP_Dir.Cast
                       HOCCT.Foundation.GP_XYZ.Cast
                       HOCCT.Foundation.GP_Vec.Cast
                       HOCCT.Foundation.GP_Pnt.Cast
                       HOCCT.Foundation.TopLoc_Location.Cast
                       HOCCT.Foundation.Standard_Transient.Cast
                       HOCCT.Foundation.GP_Trsf.Implementation
                       HOCCT.Foundation.GP_Pln.Implementation
                       HOCCT.Foundation.GP_Lin.Implementation
                       HOCCT.Foundation.GP_Dir.Implementation
                       HOCCT.Foundation.GP_XYZ.Implementation
                       HOCCT.Foundation.GP_Vec.Implementation
                       HOCCT.Foundation.GP_Pnt.Implementation
                       HOCCT.Foundation.TopLoc_Location.Implementation
                       HOCCT.Foundation.Standard_Transient.Implementation
                       HOCCT.Foundation.NCollection_List.Template
                       HOCCT.Foundation.Standard_Handle.Template
                       HOCCT.Foundation.NCollection_List.TH
                       HOCCT.Foundation.Standard_Handle.TH

  Other-Modules:
                       

  extra-lib-dirs: 
  extra-libraries:    
  Include-dirs:       csrc 
  pkgconfig-depends: 
  Install-includes:
                       hocct-FoundationType.h
                       HOCCT_Foundation_GP_Trsf.h
                       HOCCT_Foundation_GP_Pln.h
                       HOCCT_Foundation_GP_Lin.h
                       HOCCT_Foundation_GP_Dir.h
                       HOCCT_Foundation_GP_XYZ.h
                       HOCCT_Foundation_GP_Vec.h
                       HOCCT_Foundation_GP_Pnt.h
                       HOCCT_Foundation_TopLoc_Location.h
                       HOCCT_Foundation_Standard_Transient.h

  Cxx-sources:
                       csrc/HOCCT_Foundation_GP_Trsf.cpp
                       csrc/HOCCT_Foundation_GP_Pln.cpp
                       csrc/HOCCT_Foundation_GP_Lin.cpp
                       csrc/HOCCT_Foundation_GP_Dir.cpp
                       csrc/HOCCT_Foundation_GP_XYZ.cpp
                       csrc/HOCCT_Foundation_GP_Vec.cpp
                       csrc/HOCCT_Foundation_GP_Pnt.cpp
                       csrc/HOCCT_Foundation_TopLoc_Location.cpp
                       csrc/HOCCT_Foundation_Standard_Transient.cpp

