Cabal-version:  3.0
Name:                hocct-ModelingData
Version:     0.1.0
Synopsis:    
Description:         
Homepage:       
license: GPL-2.0-only
license-file: LICENSE
Author:              
Maintainer:  
Category:       
Tested-with:    GHC == 9.0.2 || == 9.2.4 || == 9.4.2 
Build-Type: Custom
custom-setup
  setup-depends: Cabal, base, process

Extra-source-files:

                       csrc/HOCCT_ModelingData_GCE_MakeRotation.h
                       csrc/HOCCT_ModelingData_GCE_MakeMirror.h
                       csrc/HOCCT_ModelingData_GCE_MakeScale.h
                       csrc/HOCCT_ModelingData_GCE_MakeTranslation.h
                       csrc/HOCCT_ModelingData_GC_MakeSegment.h
                       csrc/HOCCT_ModelingData_GC_Root.h
                       csrc/HOCCT_ModelingData_Geom_RectangularTrimmedSurface.h
                       csrc/HOCCT_ModelingData_Geom_BezierSurface.h
                       csrc/HOCCT_ModelingData_Geom_BSplineSurface.h
                       csrc/HOCCT_ModelingData_Geom_BSplineCurve.h
                       csrc/HOCCT_ModelingData_Geom_BezierCurve.h
                       csrc/HOCCT_ModelingData_Geom_TrimmedCurve.h
                       csrc/HOCCT_ModelingData_Geom_Parabola.h
                       csrc/HOCCT_ModelingData_Geom_Hyperbola.h
                       csrc/HOCCT_ModelingData_Geom_Ellipse.h
                       csrc/HOCCT_ModelingData_Geom_Circle.h
                       csrc/HOCCT_ModelingData_Geom_VectorWithMagnitude.h
                       csrc/HOCCT_ModelingData_Geom_Direction.h
                       csrc/HOCCT_ModelingData_Geom_BoundedSurface.h
                       csrc/HOCCT_ModelingData_Geom_Line.h
                       csrc/HOCCT_ModelingData_Geom_OffsetCurve.h
                       csrc/HOCCT_ModelingData_Geom_Conic.h
                       csrc/HOCCT_ModelingData_Geom_BoundedCurve.h
                       csrc/HOCCT_ModelingData_Geom_CartesianPoint.h
                       csrc/HOCCT_ModelingData_Geom_Vector.h
                       csrc/HOCCT_ModelingData_Geom_Surface.h
                       csrc/HOCCT_ModelingData_Geom_Curve.h
                       csrc/HOCCT_ModelingData_Geom_Point.h
                       csrc/HOCCT_ModelingData_Geom_Geometry.h
                       csrc/HOCCT_ModelingData_TopoDS_Builder.h
                       csrc/HOCCT_ModelingData_TopoDS_Wire.h
                       csrc/HOCCT_ModelingData_TopoDS_Vertex.h
                       csrc/HOCCT_ModelingData_TopoDS_Solid.h
                       csrc/HOCCT_ModelingData_TopoDS_Shell.h
                       csrc/HOCCT_ModelingData_TopoDS_Face.h
                       csrc/HOCCT_ModelingData_TopoDS_Edge.h
                       csrc/HOCCT_ModelingData_TopoDS_Compound.h
                       csrc/HOCCT_ModelingData_TopoDS_CompSolid.h
                       csrc/HOCCT_ModelingData_TopoDS_Shape.h
                       csrc/HOCCT_ModelingData_TopExp_Explorer.h
                       csrc/HOCCT_ModelingData_BRepTools.h
                       csrc/HOCCT_ModelingData_Message_ProgressRange.h
                       csrc/HOCCT_ModelingData_GCE_MakeRotation.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeMirror.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeScale.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeTranslation.cpp
                       csrc/HOCCT_ModelingData_GC_MakeSegment.cpp
                       csrc/HOCCT_ModelingData_GC_Root.cpp
                       csrc/HOCCT_ModelingData_Geom_RectangularTrimmedSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BezierSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BSplineSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BSplineCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_BezierCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_TrimmedCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_Parabola.cpp
                       csrc/HOCCT_ModelingData_Geom_Hyperbola.cpp
                       csrc/HOCCT_ModelingData_Geom_Ellipse.cpp
                       csrc/HOCCT_ModelingData_Geom_Circle.cpp
                       csrc/HOCCT_ModelingData_Geom_VectorWithMagnitude.cpp
                       csrc/HOCCT_ModelingData_Geom_Direction.cpp
                       csrc/HOCCT_ModelingData_Geom_BoundedSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_Line.cpp
                       csrc/HOCCT_ModelingData_Geom_OffsetCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_Conic.cpp
                       csrc/HOCCT_ModelingData_Geom_BoundedCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_CartesianPoint.cpp
                       csrc/HOCCT_ModelingData_Geom_Vector.cpp
                       csrc/HOCCT_ModelingData_Geom_Surface.cpp
                       csrc/HOCCT_ModelingData_Geom_Curve.cpp
                       csrc/HOCCT_ModelingData_Geom_Point.cpp
                       csrc/HOCCT_ModelingData_Geom_Geometry.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Builder.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Wire.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Vertex.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Solid.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Shell.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Face.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Edge.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Compound.cpp
                       csrc/HOCCT_ModelingData_TopoDS_CompSolid.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Shape.cpp
                       csrc/HOCCT_ModelingData_TopExp_Explorer.cpp
                       csrc/HOCCT_ModelingData_BRepTools.cpp
                       csrc/HOCCT_ModelingData_Message_ProgressRange.cpp




Library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:  -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports
  ghc-prof-options: -caf-all -auto-all
  cxx-options: -std=c++17
  Build-Depends: base > 4 && < 5, fficxx-runtime >= 0.7.0.1, template-haskell, stdcxx, hocct-Foundation
  Exposed-Modules:
                       HOCCT.ModelingData
                       HOCCT.ModelingData.Ordinary
                       HOCCT.ModelingData.Template
                       HOCCT.ModelingData.TH
                       HOCCT.ModelingData.GCE_MakeRotation
                       HOCCT.ModelingData.GCE_MakeMirror
                       HOCCT.ModelingData.GCE_MakeScale
                       HOCCT.ModelingData.GCE_MakeTranslation
                       HOCCT.ModelingData.GC_MakeSegment
                       HOCCT.ModelingData.GC_Root
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface
                       HOCCT.ModelingData.Geom_BezierSurface
                       HOCCT.ModelingData.Geom_BSplineSurface
                       HOCCT.ModelingData.Geom_BSplineCurve
                       HOCCT.ModelingData.Geom_BezierCurve
                       HOCCT.ModelingData.Geom_TrimmedCurve
                       HOCCT.ModelingData.Geom_Parabola
                       HOCCT.ModelingData.Geom_Hyperbola
                       HOCCT.ModelingData.Geom_Ellipse
                       HOCCT.ModelingData.Geom_Circle
                       HOCCT.ModelingData.Geom_VectorWithMagnitude
                       HOCCT.ModelingData.Geom_Direction
                       HOCCT.ModelingData.Geom_BoundedSurface
                       HOCCT.ModelingData.Geom_Line
                       HOCCT.ModelingData.Geom_OffsetCurve
                       HOCCT.ModelingData.Geom_Conic
                       HOCCT.ModelingData.Geom_BoundedCurve
                       HOCCT.ModelingData.Geom_CartesianPoint
                       HOCCT.ModelingData.Geom_Vector
                       HOCCT.ModelingData.Geom_Surface
                       HOCCT.ModelingData.Geom_Curve
                       HOCCT.ModelingData.Geom_Point
                       HOCCT.ModelingData.Geom_Geometry
                       HOCCT.ModelingData.TopoDS_Builder
                       HOCCT.ModelingData.TopoDS_Wire
                       HOCCT.ModelingData.TopoDS_Vertex
                       HOCCT.ModelingData.TopoDS_Solid
                       HOCCT.ModelingData.TopoDS_Shell
                       HOCCT.ModelingData.TopoDS_Face
                       HOCCT.ModelingData.TopoDS_Edge
                       HOCCT.ModelingData.TopoDS_Compound
                       HOCCT.ModelingData.TopoDS_CompSolid
                       HOCCT.ModelingData.TopoDS_Shape
                       HOCCT.ModelingData.TopExp_Explorer
                       HOCCT.ModelingData.BRepTools
                       HOCCT.ModelingData.Message_ProgressRange
                       HOCCT.ModelingData.GCE_MakeRotation.RawType
                       HOCCT.ModelingData.GCE_MakeMirror.RawType
                       HOCCT.ModelingData.GCE_MakeScale.RawType
                       HOCCT.ModelingData.GCE_MakeTranslation.RawType
                       HOCCT.ModelingData.GC_MakeSegment.RawType
                       HOCCT.ModelingData.GC_Root.RawType
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface.RawType
                       HOCCT.ModelingData.Geom_BezierSurface.RawType
                       HOCCT.ModelingData.Geom_BSplineSurface.RawType
                       HOCCT.ModelingData.Geom_BSplineCurve.RawType
                       HOCCT.ModelingData.Geom_BezierCurve.RawType
                       HOCCT.ModelingData.Geom_TrimmedCurve.RawType
                       HOCCT.ModelingData.Geom_Parabola.RawType
                       HOCCT.ModelingData.Geom_Hyperbola.RawType
                       HOCCT.ModelingData.Geom_Ellipse.RawType
                       HOCCT.ModelingData.Geom_Circle.RawType
                       HOCCT.ModelingData.Geom_VectorWithMagnitude.RawType
                       HOCCT.ModelingData.Geom_Direction.RawType
                       HOCCT.ModelingData.Geom_BoundedSurface.RawType
                       HOCCT.ModelingData.Geom_Line.RawType
                       HOCCT.ModelingData.Geom_OffsetCurve.RawType
                       HOCCT.ModelingData.Geom_Conic.RawType
                       HOCCT.ModelingData.Geom_BoundedCurve.RawType
                       HOCCT.ModelingData.Geom_CartesianPoint.RawType
                       HOCCT.ModelingData.Geom_Vector.RawType
                       HOCCT.ModelingData.Geom_Surface.RawType
                       HOCCT.ModelingData.Geom_Curve.RawType
                       HOCCT.ModelingData.Geom_Point.RawType
                       HOCCT.ModelingData.Geom_Geometry.RawType
                       HOCCT.ModelingData.TopoDS_Builder.RawType
                       HOCCT.ModelingData.TopoDS_Wire.RawType
                       HOCCT.ModelingData.TopoDS_Vertex.RawType
                       HOCCT.ModelingData.TopoDS_Solid.RawType
                       HOCCT.ModelingData.TopoDS_Shell.RawType
                       HOCCT.ModelingData.TopoDS_Face.RawType
                       HOCCT.ModelingData.TopoDS_Edge.RawType
                       HOCCT.ModelingData.TopoDS_Compound.RawType
                       HOCCT.ModelingData.TopoDS_CompSolid.RawType
                       HOCCT.ModelingData.TopoDS_Shape.RawType
                       HOCCT.ModelingData.TopExp_Explorer.RawType
                       HOCCT.ModelingData.BRepTools.RawType
                       HOCCT.ModelingData.Message_ProgressRange.RawType
                       HOCCT.ModelingData.GCE_MakeRotation.FFI
                       HOCCT.ModelingData.GCE_MakeMirror.FFI
                       HOCCT.ModelingData.GCE_MakeScale.FFI
                       HOCCT.ModelingData.GCE_MakeTranslation.FFI
                       HOCCT.ModelingData.GC_MakeSegment.FFI
                       HOCCT.ModelingData.GC_Root.FFI
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface.FFI
                       HOCCT.ModelingData.Geom_BezierSurface.FFI
                       HOCCT.ModelingData.Geom_BSplineSurface.FFI
                       HOCCT.ModelingData.Geom_BSplineCurve.FFI
                       HOCCT.ModelingData.Geom_BezierCurve.FFI
                       HOCCT.ModelingData.Geom_TrimmedCurve.FFI
                       HOCCT.ModelingData.Geom_Parabola.FFI
                       HOCCT.ModelingData.Geom_Hyperbola.FFI
                       HOCCT.ModelingData.Geom_Ellipse.FFI
                       HOCCT.ModelingData.Geom_Circle.FFI
                       HOCCT.ModelingData.Geom_VectorWithMagnitude.FFI
                       HOCCT.ModelingData.Geom_Direction.FFI
                       HOCCT.ModelingData.Geom_BoundedSurface.FFI
                       HOCCT.ModelingData.Geom_Line.FFI
                       HOCCT.ModelingData.Geom_OffsetCurve.FFI
                       HOCCT.ModelingData.Geom_Conic.FFI
                       HOCCT.ModelingData.Geom_BoundedCurve.FFI
                       HOCCT.ModelingData.Geom_CartesianPoint.FFI
                       HOCCT.ModelingData.Geom_Vector.FFI
                       HOCCT.ModelingData.Geom_Surface.FFI
                       HOCCT.ModelingData.Geom_Curve.FFI
                       HOCCT.ModelingData.Geom_Point.FFI
                       HOCCT.ModelingData.Geom_Geometry.FFI
                       HOCCT.ModelingData.TopoDS_Builder.FFI
                       HOCCT.ModelingData.TopoDS_Wire.FFI
                       HOCCT.ModelingData.TopoDS_Vertex.FFI
                       HOCCT.ModelingData.TopoDS_Solid.FFI
                       HOCCT.ModelingData.TopoDS_Shell.FFI
                       HOCCT.ModelingData.TopoDS_Face.FFI
                       HOCCT.ModelingData.TopoDS_Edge.FFI
                       HOCCT.ModelingData.TopoDS_Compound.FFI
                       HOCCT.ModelingData.TopoDS_CompSolid.FFI
                       HOCCT.ModelingData.TopoDS_Shape.FFI
                       HOCCT.ModelingData.TopExp_Explorer.FFI
                       HOCCT.ModelingData.BRepTools.FFI
                       HOCCT.ModelingData.Message_ProgressRange.FFI
                       HOCCT.ModelingData.GCE_MakeRotation.Interface
                       HOCCT.ModelingData.GCE_MakeMirror.Interface
                       HOCCT.ModelingData.GCE_MakeScale.Interface
                       HOCCT.ModelingData.GCE_MakeTranslation.Interface
                       HOCCT.ModelingData.GC_MakeSegment.Interface
                       HOCCT.ModelingData.GC_Root.Interface
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface.Interface
                       HOCCT.ModelingData.Geom_BezierSurface.Interface
                       HOCCT.ModelingData.Geom_BSplineSurface.Interface
                       HOCCT.ModelingData.Geom_BSplineCurve.Interface
                       HOCCT.ModelingData.Geom_BezierCurve.Interface
                       HOCCT.ModelingData.Geom_TrimmedCurve.Interface
                       HOCCT.ModelingData.Geom_Parabola.Interface
                       HOCCT.ModelingData.Geom_Hyperbola.Interface
                       HOCCT.ModelingData.Geom_Ellipse.Interface
                       HOCCT.ModelingData.Geom_Circle.Interface
                       HOCCT.ModelingData.Geom_VectorWithMagnitude.Interface
                       HOCCT.ModelingData.Geom_Direction.Interface
                       HOCCT.ModelingData.Geom_BoundedSurface.Interface
                       HOCCT.ModelingData.Geom_Line.Interface
                       HOCCT.ModelingData.Geom_OffsetCurve.Interface
                       HOCCT.ModelingData.Geom_Conic.Interface
                       HOCCT.ModelingData.Geom_BoundedCurve.Interface
                       HOCCT.ModelingData.Geom_CartesianPoint.Interface
                       HOCCT.ModelingData.Geom_Vector.Interface
                       HOCCT.ModelingData.Geom_Surface.Interface
                       HOCCT.ModelingData.Geom_Curve.Interface
                       HOCCT.ModelingData.Geom_Point.Interface
                       HOCCT.ModelingData.Geom_Geometry.Interface
                       HOCCT.ModelingData.TopoDS_Builder.Interface
                       HOCCT.ModelingData.TopoDS_Wire.Interface
                       HOCCT.ModelingData.TopoDS_Vertex.Interface
                       HOCCT.ModelingData.TopoDS_Solid.Interface
                       HOCCT.ModelingData.TopoDS_Shell.Interface
                       HOCCT.ModelingData.TopoDS_Face.Interface
                       HOCCT.ModelingData.TopoDS_Edge.Interface
                       HOCCT.ModelingData.TopoDS_Compound.Interface
                       HOCCT.ModelingData.TopoDS_CompSolid.Interface
                       HOCCT.ModelingData.TopoDS_Shape.Interface
                       HOCCT.ModelingData.TopExp_Explorer.Interface
                       HOCCT.ModelingData.BRepTools.Interface
                       HOCCT.ModelingData.Message_ProgressRange.Interface
                       HOCCT.ModelingData.GCE_MakeRotation.Cast
                       HOCCT.ModelingData.GCE_MakeMirror.Cast
                       HOCCT.ModelingData.GCE_MakeScale.Cast
                       HOCCT.ModelingData.GCE_MakeTranslation.Cast
                       HOCCT.ModelingData.GC_MakeSegment.Cast
                       HOCCT.ModelingData.GC_Root.Cast
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface.Cast
                       HOCCT.ModelingData.Geom_BezierSurface.Cast
                       HOCCT.ModelingData.Geom_BSplineSurface.Cast
                       HOCCT.ModelingData.Geom_BSplineCurve.Cast
                       HOCCT.ModelingData.Geom_BezierCurve.Cast
                       HOCCT.ModelingData.Geom_TrimmedCurve.Cast
                       HOCCT.ModelingData.Geom_Parabola.Cast
                       HOCCT.ModelingData.Geom_Hyperbola.Cast
                       HOCCT.ModelingData.Geom_Ellipse.Cast
                       HOCCT.ModelingData.Geom_Circle.Cast
                       HOCCT.ModelingData.Geom_VectorWithMagnitude.Cast
                       HOCCT.ModelingData.Geom_Direction.Cast
                       HOCCT.ModelingData.Geom_BoundedSurface.Cast
                       HOCCT.ModelingData.Geom_Line.Cast
                       HOCCT.ModelingData.Geom_OffsetCurve.Cast
                       HOCCT.ModelingData.Geom_Conic.Cast
                       HOCCT.ModelingData.Geom_BoundedCurve.Cast
                       HOCCT.ModelingData.Geom_CartesianPoint.Cast
                       HOCCT.ModelingData.Geom_Vector.Cast
                       HOCCT.ModelingData.Geom_Surface.Cast
                       HOCCT.ModelingData.Geom_Curve.Cast
                       HOCCT.ModelingData.Geom_Point.Cast
                       HOCCT.ModelingData.Geom_Geometry.Cast
                       HOCCT.ModelingData.TopoDS_Builder.Cast
                       HOCCT.ModelingData.TopoDS_Wire.Cast
                       HOCCT.ModelingData.TopoDS_Vertex.Cast
                       HOCCT.ModelingData.TopoDS_Solid.Cast
                       HOCCT.ModelingData.TopoDS_Shell.Cast
                       HOCCT.ModelingData.TopoDS_Face.Cast
                       HOCCT.ModelingData.TopoDS_Edge.Cast
                       HOCCT.ModelingData.TopoDS_Compound.Cast
                       HOCCT.ModelingData.TopoDS_CompSolid.Cast
                       HOCCT.ModelingData.TopoDS_Shape.Cast
                       HOCCT.ModelingData.TopExp_Explorer.Cast
                       HOCCT.ModelingData.BRepTools.Cast
                       HOCCT.ModelingData.Message_ProgressRange.Cast
                       HOCCT.ModelingData.GCE_MakeRotation.Implementation
                       HOCCT.ModelingData.GCE_MakeMirror.Implementation
                       HOCCT.ModelingData.GCE_MakeScale.Implementation
                       HOCCT.ModelingData.GCE_MakeTranslation.Implementation
                       HOCCT.ModelingData.GC_MakeSegment.Implementation
                       HOCCT.ModelingData.GC_Root.Implementation
                       HOCCT.ModelingData.Geom_RectangularTrimmedSurface.Implementation
                       HOCCT.ModelingData.Geom_BezierSurface.Implementation
                       HOCCT.ModelingData.Geom_BSplineSurface.Implementation
                       HOCCT.ModelingData.Geom_BSplineCurve.Implementation
                       HOCCT.ModelingData.Geom_BezierCurve.Implementation
                       HOCCT.ModelingData.Geom_TrimmedCurve.Implementation
                       HOCCT.ModelingData.Geom_Parabola.Implementation
                       HOCCT.ModelingData.Geom_Hyperbola.Implementation
                       HOCCT.ModelingData.Geom_Ellipse.Implementation
                       HOCCT.ModelingData.Geom_Circle.Implementation
                       HOCCT.ModelingData.Geom_VectorWithMagnitude.Implementation
                       HOCCT.ModelingData.Geom_Direction.Implementation
                       HOCCT.ModelingData.Geom_BoundedSurface.Implementation
                       HOCCT.ModelingData.Geom_Line.Implementation
                       HOCCT.ModelingData.Geom_OffsetCurve.Implementation
                       HOCCT.ModelingData.Geom_Conic.Implementation
                       HOCCT.ModelingData.Geom_BoundedCurve.Implementation
                       HOCCT.ModelingData.Geom_CartesianPoint.Implementation
                       HOCCT.ModelingData.Geom_Vector.Implementation
                       HOCCT.ModelingData.Geom_Surface.Implementation
                       HOCCT.ModelingData.Geom_Curve.Implementation
                       HOCCT.ModelingData.Geom_Point.Implementation
                       HOCCT.ModelingData.Geom_Geometry.Implementation
                       HOCCT.ModelingData.TopoDS_Builder.Implementation
                       HOCCT.ModelingData.TopoDS_Wire.Implementation
                       HOCCT.ModelingData.TopoDS_Vertex.Implementation
                       HOCCT.ModelingData.TopoDS_Solid.Implementation
                       HOCCT.ModelingData.TopoDS_Shell.Implementation
                       HOCCT.ModelingData.TopoDS_Face.Implementation
                       HOCCT.ModelingData.TopoDS_Edge.Implementation
                       HOCCT.ModelingData.TopoDS_Compound.Implementation
                       HOCCT.ModelingData.TopoDS_CompSolid.Implementation
                       HOCCT.ModelingData.TopoDS_Shape.Implementation
                       HOCCT.ModelingData.TopExp_Explorer.Implementation
                       HOCCT.ModelingData.BRepTools.Implementation
                       HOCCT.ModelingData.Message_ProgressRange.Implementation

  Other-Modules:
                       

  extra-lib-dirs: 
  extra-libraries:    
  Include-dirs:       csrc 
  pkgconfig-depends: 
  Install-includes:
                       hocct-ModelingDataType.h
                       HOCCT_ModelingData_GCE_MakeRotation.h
                       HOCCT_ModelingData_GCE_MakeMirror.h
                       HOCCT_ModelingData_GCE_MakeScale.h
                       HOCCT_ModelingData_GCE_MakeTranslation.h
                       HOCCT_ModelingData_GC_MakeSegment.h
                       HOCCT_ModelingData_GC_Root.h
                       HOCCT_ModelingData_Geom_RectangularTrimmedSurface.h
                       HOCCT_ModelingData_Geom_BezierSurface.h
                       HOCCT_ModelingData_Geom_BSplineSurface.h
                       HOCCT_ModelingData_Geom_BSplineCurve.h
                       HOCCT_ModelingData_Geom_BezierCurve.h
                       HOCCT_ModelingData_Geom_TrimmedCurve.h
                       HOCCT_ModelingData_Geom_Parabola.h
                       HOCCT_ModelingData_Geom_Hyperbola.h
                       HOCCT_ModelingData_Geom_Ellipse.h
                       HOCCT_ModelingData_Geom_Circle.h
                       HOCCT_ModelingData_Geom_VectorWithMagnitude.h
                       HOCCT_ModelingData_Geom_Direction.h
                       HOCCT_ModelingData_Geom_BoundedSurface.h
                       HOCCT_ModelingData_Geom_Line.h
                       HOCCT_ModelingData_Geom_OffsetCurve.h
                       HOCCT_ModelingData_Geom_Conic.h
                       HOCCT_ModelingData_Geom_BoundedCurve.h
                       HOCCT_ModelingData_Geom_CartesianPoint.h
                       HOCCT_ModelingData_Geom_Vector.h
                       HOCCT_ModelingData_Geom_Surface.h
                       HOCCT_ModelingData_Geom_Curve.h
                       HOCCT_ModelingData_Geom_Point.h
                       HOCCT_ModelingData_Geom_Geometry.h
                       HOCCT_ModelingData_TopoDS_Builder.h
                       HOCCT_ModelingData_TopoDS_Wire.h
                       HOCCT_ModelingData_TopoDS_Vertex.h
                       HOCCT_ModelingData_TopoDS_Solid.h
                       HOCCT_ModelingData_TopoDS_Shell.h
                       HOCCT_ModelingData_TopoDS_Face.h
                       HOCCT_ModelingData_TopoDS_Edge.h
                       HOCCT_ModelingData_TopoDS_Compound.h
                       HOCCT_ModelingData_TopoDS_CompSolid.h
                       HOCCT_ModelingData_TopoDS_Shape.h
                       HOCCT_ModelingData_TopExp_Explorer.h
                       HOCCT_ModelingData_BRepTools.h
                       HOCCT_ModelingData_Message_ProgressRange.h

  Cxx-sources:
                       csrc/HOCCT_ModelingData_GCE_MakeRotation.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeMirror.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeScale.cpp
                       csrc/HOCCT_ModelingData_GCE_MakeTranslation.cpp
                       csrc/HOCCT_ModelingData_GC_MakeSegment.cpp
                       csrc/HOCCT_ModelingData_GC_Root.cpp
                       csrc/HOCCT_ModelingData_Geom_RectangularTrimmedSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BezierSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BSplineSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_BSplineCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_BezierCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_TrimmedCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_Parabola.cpp
                       csrc/HOCCT_ModelingData_Geom_Hyperbola.cpp
                       csrc/HOCCT_ModelingData_Geom_Ellipse.cpp
                       csrc/HOCCT_ModelingData_Geom_Circle.cpp
                       csrc/HOCCT_ModelingData_Geom_VectorWithMagnitude.cpp
                       csrc/HOCCT_ModelingData_Geom_Direction.cpp
                       csrc/HOCCT_ModelingData_Geom_BoundedSurface.cpp
                       csrc/HOCCT_ModelingData_Geom_Line.cpp
                       csrc/HOCCT_ModelingData_Geom_OffsetCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_Conic.cpp
                       csrc/HOCCT_ModelingData_Geom_BoundedCurve.cpp
                       csrc/HOCCT_ModelingData_Geom_CartesianPoint.cpp
                       csrc/HOCCT_ModelingData_Geom_Vector.cpp
                       csrc/HOCCT_ModelingData_Geom_Surface.cpp
                       csrc/HOCCT_ModelingData_Geom_Curve.cpp
                       csrc/HOCCT_ModelingData_Geom_Point.cpp
                       csrc/HOCCT_ModelingData_Geom_Geometry.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Builder.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Wire.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Vertex.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Solid.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Shell.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Face.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Edge.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Compound.cpp
                       csrc/HOCCT_ModelingData_TopoDS_CompSolid.cpp
                       csrc/HOCCT_ModelingData_TopoDS_Shape.cpp
                       csrc/HOCCT_ModelingData_TopExp_Explorer.cpp
                       csrc/HOCCT_ModelingData_BRepTools.cpp
                       csrc/HOCCT_ModelingData_Message_ProgressRange.cpp

