Cabal-version:  3.0
Name:                hocct
Version:     0.1.0
Synopsis:    Haskell binding to the OCCT geometry library
Description:         hocct is a haskell Foreign Function Interface (FFI) binding to OCCT. OCCT(https://dev.opencascade.org) is an open-source full-scale 3D geometry library
Homepage:       https://github.com/ivanovs-4/hocct
license: GPL-2.0-only
license-file: LICENSE
Author:              Sergey Ivanov
Maintainer:  Sergey Ivanov <ivanovs-4@yandex.ru>
Category:       3D Modeling
Tested-with:    GHC == 9.6.5
Build-Type: Custom
custom-setup
  setup-depends: Cabal, base, process

Extra-source-files:
                       




Library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options:  -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans -fno-warn-unused-imports
  ghc-prof-options: -caf-all -auto-all
  cxx-options: -std=c++17
  Build-Depends: base, hocct-Foundation, hocct-ModelingAlgorithms, hocct-ModelingData
  Exposed-Modules:
                       HOCCT
  Other-Modules:

  extra-lib-dirs: 
  extra-libraries:    
  Include-dirs:       csrc 
  pkgconfig-depends: 
  Install-includes:

  Cxx-sources:


